--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Ignore files with sensitive configuration information
+/config/initializers/aws.yml
